bug with css on caseoverivew tooltip  - Amend attribute value used for mdtooltip  - amend z-index for caseoveview and backdrop

--- a/src/scss/layouts/_modal.scss
+++ b/src/scss/layouts/_modal.scss
@@ -87,7 +87,7 @@
     height:100%;
     width:100%;
     background: #000;
-    z-index: 999;
+    z-index: 1040;
     opacity: 0.6;
     animation: animatedBackground .25s ease-in-out;    
 }
@@ -101,7 +101,7 @@
     margin: 0 auto;
     max-width: 900px;
     height: 660px;
-    z-index: 999;
+    z-index: 1041;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
